[project]
name = "precompiled"
version = "0.1.5"
description = "leetcode precompiled package"
authors = [
    { name = "zonewave", email = "ybzhang17@163.com" },
]
dependencies = [
    "flake8>=5.0.4",
    "coverage>=7.2.7",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/zonewave/leetcode-precomiled/tree/master/py"
Issues = "https://github.com/zonewave/leetcode-precomiled/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
