[project]
name = "precompiled"
version = "0.1.11"
description = "leetcode precompiled package"
authors = [
    { name = "zonewave", email = "ybzhang17@163.com" },
]

requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/zonewave/leetcode-precompiled/tree/master/py"
Issues = "https://github.com/zonewave/leetcode-precompiled/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "coverage>=7.2.7",
]
lint = [
    "flake8>=5.0.4",
]
